objects/Staging_Account__c/Staging_Account__c.object-meta.xml
<CustomObject>
    <label>Staging Account</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>