objects/Staging_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Salesforce Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Staging Accounts</relationshipLabel>
    <relationshipName>Staging_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>