objects/Staging_Account__c/fields/Is_Synced__c.field-meta.xml
<CustomField>
    <fullName>Is_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Synced with Salesforce Account</label>
    <type>Checkbox</type>
</CustomField>