objects/Staging_Account__c/fields/Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sync_Date__c</fullName>
    <label>Synced Date</label>
    <type>DateTime</type>
</CustomField>