objects/Staging_Account__c/fields/Last_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Updated By Customer</label>
    <referenceTo>Portal_Login__c</referenceTo>
    <relationshipLabel>Staging Accounts</relationshipLabel>
    <relationshipName>Staging_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>