objects/Staging_Account__c/fields/Number_of_Logins__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Logins__c</fullName>
    <label>Number of Logins</label>
    <summaryForeignKey>Staging_Account_Login_Activity__c.Staging_Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>