objects/Staging_Account__c/fields/Update_Request_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Update_Request_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Request Email Sent</label>
    <type>Checkbox</type>
</CustomField>