objects/Staging_Account__c/listViews/Accounts_Synced.listView-meta.xml
<ListView>
    <fullName>Accounts_Synced</fullName>
    <columns>NAME</columns>
    <columns>Billing_Street__c</columns>
    <columns>Billing_City__c</columns>
    <columns>Last_Sync_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Synced__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Accounts Synced</label>
</ListView>