objects/Staging_Account__c/listViews/Accounts_to_Send_Email.listView-meta.xml
<ListView>
    <fullName>Accounts_to_Send_Email</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Billing_Street__c</columns>
    <columns>Billing_City__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Update_Request_Email_Sent__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Accounts to Send Email</label>
</ListView>